Adding new grammars and updated makefile.

--- a/branches/antlr3/java2python/lib/Makefile
+++ b/branches/antlr3/java2python/lib/Makefile
@@ -1,26 +1,29 @@
 .PHONY: all clean
 
 
-all: parser.py lexer.py walker.py
+all: JavaParser.py JavaLexer.py JavaTreeParser.py
 
 
-lexer.py: java.g
-	antlr java.g
+JavaParser.py: Java.g
+	antlr3 Java.g
 
 
-parser.py: java.g
-	antlr java.g
+JavaLexer.py: Java.g
+	antlr3 Java.g
+
+# JavaLexer.py
 
 
-walker.py: walker.g lexer.py
-	antlr walker.g
+JavaTreeParser.py: JavaTreeParser.g 
+	antlr3 JavaTreeParser.g
 
 
 clean:
 	rm -f *.pyo
 	rm -f *.pyc
-	rm -rf lexer.py
-	rm -rf parser.py
-	rm -rf walker.py
-	rm -rf walkerTokenTypes.txt
-	rm -rf JavaTokenTypes.txt
+	rm -rf JavaParser.py
+	rm -rf JavaLexer.py
+	rm -rf JavaTreeParser.py
+	rm -rf Java.tokens
+	rm -rf JavaTreeParser.tokens
+
