Work in progress on antlr3/java1.5 branch.

--- a/branches/antlr3/java2python/tests/Makefile
+++ b/branches/antlr3/java2python/tests/Makefile
@@ -1,14 +1,18 @@
 PYTHONPATH=../../:.
-CLASSPATH:=.:/usr/share/junit/lib/junit.jar
+CLASSPATH=/usr/share/java/junit.jar:.
 
-PYOBJS=Loops.py AssignInExpr.py EmptyArray.py Switches.py ClassMember.py \
-	FloatFix.py Keywords.py ClassInit.py SuperCtorTest.py
-JAVAOBJS=Loops AssignInExpr EmptyArray Switches ClassMember FloatFix Keywords \
-	ClassInit SuperCtorTest
+java_sources := $(wildcard *.java)
+py_sources := $(addsuffix .py, $(notdir $(basename $(wildcard *.java))))
 
-all: python-test
+.SILENT: clean
+.PHONY: all $(java_sources) $(python_sources) clean
 
-python-test: $(PYOBJS)
+all: $(java_sources)
+
+
+$(java_sources):
+	javac $@  && ../bin/j2py -i $@ -o $(basename $@).py -c testconfig && rm $(basename $@).class && python $(basename $@).py
+
 
 java-test: $(JAVAOBJS)
 
@@ -21,5 +25,4 @@ java-test: $(JAVAOBJS)
 	java junit.textui.TestRunner $@
 
 clean:
-	rm -f $(PYOBJS)
-	rm -f *.class *.pyc
+	rm -f *.class *.pyc $(py_sources)
