--- a/branches/antlr3/java2python/lib/Makefile
+++ b/branches/antlr3/java2python/lib/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all clean
+.SILENT: clean
 
-
-all: JavaParser.py JavaLexer.py JavaTreeParser.py
+all: JavaParser.py JavaTreeParser.py
 
 
 JavaParser.py: Java.g
@@ -11,10 +11,8 @@ JavaParser.py: Java.g
 JavaLexer.py: Java.g
 	antlr3 Java.g
 
-# JavaLexer.py
 
-
-JavaTreeParser.py: JavaTreeParser.g 
+JavaTreeParser.py: JavaTreeParser.g JavaLexer.py
 	antlr3 JavaTreeParser.g
 
 
@@ -26,4 +24,4 @@ clean:
 	rm -rf JavaTreeParser.py
 	rm -rf Java.tokens
 	rm -rf JavaTreeParser.tokens
-
+	rm -rf Java__.g
