--- a/java2python/lib/Makefile
+++ b/java2python/lib/Makefile
@@ -1,26 +1,27 @@
 .PHONY: all clean
+.SILENT: clean
+
+all: JavaParser.py JavaTreeParser.py
 
 
-all: parser.py lexer.py walker.py
+JavaParser.py: Java.g
+	antlr3 Java.g
 
 
-lexer.py: java.g
-	antlr java.g
+JavaLexer.py: Java.g
+	antlr3 Java.g
 
 
-parser.py: java.g
-	antlr java.g
-
-
-walker.py: walker.g lexer.py
-	antlr walker.g
+JavaTreeParser.py: JavaTreeParser.g JavaLexer.py
+	antlr3 JavaTreeParser.g
 
 
 clean:
 	rm -f *.pyo
 	rm -f *.pyc
-	rm -rf lexer.py
-	rm -rf parser.py
-	rm -rf walker.py
-	rm -rf walkerTokenTypes.txt
-	rm -rf JavaTokenTypes.txt
+	rm -rf JavaParser.py
+	rm -rf JavaLexer.py
+	rm -rf JavaTreeParser.py
+	rm -rf Java.tokens
+	rm -rf JavaTreeParser.tokens
+	rm -rf Java__.g
