--- a/java2python/tests/Makefile
+++ b/java2python/tests/Makefile
@@ -4,8 +4,9 @@ CLASSPATH=/usr/share/java/junit.jar:.
 java_sources := $(wildcard *.java)
 py_sources := $(addsuffix .py, $(notdir $(basename $(wildcard *.java))))
 
+
 .SILENT: clean
-.PHONY: all $(java_sources) $(python_sources) clean
+.PHONY: all $(java_sources) $(python_sources) clean X
 
 all: $(java_sources)
 
@@ -13,9 +14,8 @@ all: $(java_sources)
 $(java_sources):
 	javac $@  && ../bin/j2py -i $@ -o $(basename $@).py -c testconfig
 	@chmod u+x $(basename $@).py
-	@bash ./compare_outputs.sh "java $(basename $@)" "python $(basename $@).py" "$@"
+	@bash ./compare_outputs.sh "java -ea $(basename $@)" "python $(basename $@).py" "$@"
 
-java-test: $(JAVAOBJS)
 
 %.py: %.java testconfig.py
 	../bin/j2py -i $< -o $@ -c testconfig
