--- a/java2python/tests/Makefile
+++ b/java2python/tests/Makefile
@@ -8,8 +8,10 @@ py_sources := $(addsuffix .py, $(notdir $(basename $(wildcard *.java))))
 .SILENT: clean
 .PHONY: all $(java_sources) $(python_sources) clean X
 
-all: $(java_sources)
+all: package_1 $(java_sources)
 
+package_1:
+	cd Package1 && ../../bin/j2py -i Class1.java  -o Class1.py
 
 $(java_sources):
 	@javac $@  && ../bin/j2py -i $@ -o $(basename $@).py -c testconfig
