adds selector grammer and fiddling.

--- a/branches/0.5/java2python/lang/Makefile
+++ b/branches/0.5/java2python/lang/Makefile
@@ -1,7 +1,7 @@
 .PHONY: all clean
 .SILENT: clean
 
-all: JavaParser.py JavaLexer.py
+all: JavaParser.py JavaLexer.py SelectorParser.py SelectorLexer.py
 
 
 JavaParser.py: Java.g
@@ -12,11 +12,20 @@ JavaLexer.py: Java.g
 	antlr3 Java.g
 
 
+SelectorParser.py: Selector.g
+	antlr3 Selector.g
+
+SelectorLexer.py: Selector.g
+	antlr3 Selector.g
+
+
 clean:
 	rm -f *.pyo
 	rm -f *.pyc
-	rm -rf JavaParser.py
-	rm -rf JavaLexer.py
-	rm -rf Java.tokens
-	rm -rf JavaTreeParser.tokens
-	rm -rf Java__.g
+	rm -f *Parser.py
+	rm -f *Lexer.py
+	rm -f *.tokens
+
+
+
+
